manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ENV_NAME
  namespace: ENV_NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ENV_NAME
  template:
    metadata:
      labels:
        app: ENV_NAME
    spec:
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-auth-claim
      containers:
      - name: app
        image: ENV_DOCKER_IMAGE
        imagePullPolicy: IfNotPresent    
        securityContext:
#         runAsUser: 2000
          allowPrivilegeEscalation: false        
        volumeMounts:
          - name: persistent-storage
            mountPath: /data
        ports:
          - containerPort: 3200
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "15"]
        readinessProbe:
          tcpSocket:
            port: 3200
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3200
          initialDelaySeconds: 15
          periodSeconds: 20
