manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ENV_NAME
  namespace: ENV_NAMESPACE
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: public
spec:
  type: LoadBalancer
  ports:
  - name: http
    targetPort: 3200
    port: 80
  - name: https
    targetPort: 3200
    port: 443
  selector:
    app: auth360-dev
