manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ENV_NAME
  namespace: ENV_NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: ENV_NAME
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: ENV_NAME
          servicePort: 80
